# autospook

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  DOCKER_SETUP.md  DOCKER_START_GUIDE.md  Dockerfile  INSTRUCTIONS.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  MAKEFILE_REFERENCE.md  MAKEFILE_TROUBLESHOOTING.md  Makefile  QUICK_START.md  README.md  READY_TO_DEPLOY.md  TESTING.md  app.py  auth.py  auth_keys.txt  build_test.sh  cloudrun.yaml  deploy.sh  dev_launch.py  docker-compose.temporal.yml  docker-compose.yml  env.example  exa_integration.py  gen_key.sh  generate_key.sh  gunicorn.conf.py  orchestrator.py  package-lock.json  pyproject.toml  pytest.ini  rate_limiter.py  requirements.txt  (+3 more)
backend/: MULTI_SOURCE_RETRIEVAL.md  SETUP_API_KEYS.md  STRUCTURED_VALIDATION.md  __init__.py  agent.py  env.example  langgraph.json  main.py  orchestrator.py  pyproject.toml  setup.py  simple_api.py  test_llm_integration.py  test_osint_retrieval.py  test_structured_agents.py
backend/src/agent/: graph.py  osint_agents_structured.py  osint_configuration.py  osint_graph.py  osint_graph_integrated.py  osint_memory.py  osint_models.py  osint_prompts.py  osint_state.py  osint_tools.py  phoenix_integration.py
backend/src/agent.egg-info/: SOURCES.txt
backend/src/api/: osint_api.py
backend/src/database/: osint_database.py  schema.sql
backend/src/evaluation/: phoenix_eval.py
backend/src/service/: osint_service.py
backend/tests/: test_api.py  test_osint_retrieval.py  test_pydantic_models.py  test_structured_agents_integration.py
baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: clients.baml  exa_api.baml  prompts.baml  test.baml
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.tsx  MermaidGraph.js  OSINTApp.tsx
frontend/src/components/osint/: EntityGraph.tsx  InvestigationProgress.tsx  OSINTDashboard.tsx  QueryInterface.tsx  ReportViewer.tsx  SourceExplorer.tsx
frontend/src/contexts/: InvestigationContext.tsx
scripts/legacy/: dev_launch.sh  start.sh  start_temporal.sh
templates/: index.html
tests/: test_dev_launcher.py  test_integration.py
